5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1593_1802.log
== TEST (2019-03-26 11:00:27) 
-- CODE:
from math import*
vida = int(input("valor da vida: "))
d1 = int(input("valor de d1: "))
d2 = int(input("valor de d2: "))

rest = int(vida - (sqrt(5*d1) + (pi**d2/3))
					print(rest)
-- ERROR:
File "XXXX", line 7
    print(rest)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:02:22) 
-- CODE:
from math import*
vida = int(input("valor da vida: "))
d1 = int(input("valor de d1: "))
d2 = int(input("valor de d2: "))

dano = int((sqrt(5*d1) + (pi**d2/3))
rest = vida - dano
print(rest)
-- ERROR:
File "XXXX", line 7
    rest = vida - dano
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:02:40) 
-- CODE:
from math import
vida = int(input("valor da vida: "))
d1 = int(input("valor de d1: "))
d2 = int(input("valor de d2: "))

dano = int((sqrt(5*d1) + (pi**d2/3))
rest = vida - dano
print(rest)
-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:03:10) 
-- CODE:
from math import*
vida = int(input("valor da vida: "))
d1 = int(input("valor de d1: "))
d2 = int(input("valor de d2: "))

dano = int((sqrt(5*d1) + (pi**(d2/3))
rest = vida - dano
print(rest)
-- ERROR:
File "XXXX", line 7
    rest = vida - dano
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:03:33) 
-- CODE:
from math import*
vida = int(input("valor da vida: "))
d1 = int(input("valor de d1: "))
d2 = int(input("valor de d2: "))

dano = int((sqrt(5*d1) + (pi**(d2/3))
rest = (vida - dano)
print(rest)
-- ERROR:
File "XXXX", line 7
    rest = (vida - dano)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:03:58) 
-- CODE:
from math import*
vida = int(input("valor da vida: "))
d1 = int(input("valor de d1: "))
d2 = int(input("valor de d2: "))

dano = int((sqrt(5*d1) + (pi**(d2/3))
rest = (vida-dano)
print(rest)
-- ERROR:
File "XXXX", line 7
    rest = (vida-dano)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:04:42) 
-- CODE:
from math import*
vida = int(input("valor da vida: "))
d1 = int(input("valor de d1: "))
d2 = int(input("valor de d2: "))

dano = ((sqrt(5*d1) + (pi**(d2/3))
rest = (vida-int(dano))
print(rest)
-- ERROR:
File "XXXX", line 7
    rest = (vida-int(dano))
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:05:38) 
-- CODE:
from math import*
vida = int(input("valor da vida: "))
d1 = int(input("valor de d1: "))
d2 = int(input("valor de d2: "))

dano = ((sqrt(5*d1)) + (pi**(d2/3))
rest = (vida-int(dano))
print(rest)
-- ERROR:
File "XXXX", line 7
    rest = (vida-int(dano))
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:06:32) 
-- CODE:
from math import*
vida = int(input("valor da vida: "))
d1 = int(input("valor de d1: "))
d2 = int(input("valor de d2: "))

dano = ((sqrt(5*d1)) + pi**(d2/3))
rest = (vida-int(dano))
print(rest)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:07:29) 
-- CODE:
from math import*
vida = int(input("valor da vida: "))
d1 = int(input("valor de d1: "))
d2 = int(input("valor de d2: "))

dano = ((sqrt(5*d1)) + pi**(d2/3))
rest = (vida-int(dano))
print(rest)
-- EXECUTION TIME:
0.201336
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
